5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4366/executions/1649_1053.log
== TEST (2019-04-09 18:36:53) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
if (cervo == "S":
	 mensagem=cervo eh patrono do Harry Potter
	 print(mensagem)
else:
	 mensagem= nao eh patrono do Harry Potter
	 print(mensagem)

-- ERROR:
File "XXXX", line 4
    if (cervo == "S":
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 18:36:59) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
if (cervo == "S"):
	 mensagem=cervo eh patrono do Harry Potter
	 print(mensagem)
else:
	 mensagem= nao eh patrono do Harry Potter
	 print(mensagem)

-- ERROR:
File "XXXX", line 5
    mensagem=cervo eh patrono do Harry Potter
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 18:37:56) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
if (cervo == patrono):
	 mensagem=cervo eh patrono do Harry Potter
	 print(mensagem)
else:
	 mensagem= nao eh patrono do Harry Potter
	 print(mensagem)

-- ERROR:
File "XXXX", line 5
    mensagem=cervo eh patrono do Harry Potter
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 18:38:35) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
if (cervo == patrono):
	 mensagem=cervo
	 print(mensagem)
else:
	 mensagem= nao eh patrono do Harry Potter
	 print(mensagem)

-- ERROR:
File "XXXX", line 8
    mensagem= nao eh patrono do Harry Potter
                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 18:38:59) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
if (cervo == patrono):
	 mensagem=cervo
	 print(mensagem)
else:
	 mensagem= cervo nao eh patrono
	 print(mensagem)

-- ERROR:
File "XXXX", line 8
    mensagem= cervo nao eh patrono
                      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 18:39:14) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
if (cervo == patrono):
	 mensagem=cervo
	 print(mensagem)
else:
	 mensagem= nao eh cervo
	 print(mensagem)

-- ERROR:
File "XXXX", line 8
    mensagem= nao eh cervo
                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 18:40:06) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
if (cervo == patrono):
	 mensagem="cervo eh patrono do Harry Potter"
	 print(mensagem)
else:
	 mensagem= "nao eh patrono do Harry Potter"
	 print(mensagem)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    if (cervo == patrono):
NameError: name 'cervo' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 18:41:15) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
if (cervo=="S"):
	 mensagem="cervo eh patrono do Harry Potter"
	 print(mensagem)
else:
	 mensagem= "nao eh patrono do Harry Potter"
	 print(mensagem)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    if (cervo=="S"):
NameError: name 'cervo' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 18:41:51) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
if:
	 mensagem="cervo eh patrono do Harry Potter"
	 print(mensagem)
else:
	 mensagem= "nao eh patrono do Harry Potter"
	 print(mensagem)

-- ERROR:
File "XXXX", line 4
    if:
      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 18:42:48) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
if(cervo!=patrono):
	 mensagem="cervo eh patrono do Harry Potter"
	 print(mensagem)
else:
	 mensagem= "nao eh patrono do Harry Potter"
	 print(mensagem)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    if(cervo!=patrono):
NameError: name 'cervo' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 18:43:10) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
if(Expectro Patronum!=patrono):
	 mensagem="cervo eh patrono do Harry Potter"
	 print(mensagem)
else:
	 mensagem= "nao eh patrono do Harry Potter"
	 print(mensagem)

-- ERROR:
File "XXXX", line 4
    if(Expectro Patronum!=patrono):
                       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 18:44:10) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
if(<entrada>):
	 mensagem="cervo eh patrono do Harry Potter"
	 print(mensagem)
else:
	 mensagem= "nao eh patrono do Harry Potter"
	 print(mensagem)

-- ERROR:
File "XXXX", line 4
    if(<entrada>):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 18:45:02) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
if(patrono):
	 mensagem="cervo eh patrono do Harry Potter"
	 print(mensagem)
else:
	 mensagem= "nao eh patrono do Harry Potter"
	 print(mensagem)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    if(patrono):
NameError: name 'patrono' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 18:45:15) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
if(patrono==cervo):
	 mensagem="cervo eh patrono do Harry Potter"
	 print(mensagem)
else:
	 mensagem= "nao eh patrono do Harry Potter"
	 print(mensagem)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    if(patrono==cervo):
NameError: name 'patrono' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 18:47:31) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
if(cervo==asno):
	 mensagem="cervo eh patrono do Harry Potter"
	 print(mensagem)
else:
	 mensagem= "nao eh patrono do Harry Potter"
	 print(mensagem)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    if(cervo==asno):
NameError: name 'cervo' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 18:47:47) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
if(asno=="S"):
	 mensagem="cervo eh patrono do Harry Potter"
	 print(mensagem)
else:
	 mensagem= "nao eh patrono do Harry Potter"
	 print(mensagem)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    if(asno=="S"):
NameError: name 'asno' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 18:48:39) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
if("cervo==patrono"):
	 mensagem="cervo eh patrono do Harry Potter"
	 print(mensagem)
else:
	 mensagem= "nao eh patrono do Harry Potter"
	 print(mensagem)

-- OUTPUT:
cervo eh patrono do Harry Potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 18:48:58) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
if("asno==cervo"):
	 mensagem="cervo eh patrono do Harry Potter"
	 print(mensagem)
else:
	 mensagem= "nao eh patrono do Harry Potter"
	 print(mensagem)

-- OUTPUT:
cervo eh patrono do Harry Potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 18:49:06) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
if("asno==patrono"):
	 mensagem="cervo eh patrono do Harry Potter"
	 print(mensagem)
else:
	 mensagem= "nao eh patrono do Harry Potter"
	 print(mensagem)

-- OUTPUT:
cervo eh patrono do Harry Potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 18:50:11) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
if("cervo!=asno"):
	 mensagem="cervo eh patrono do Harry Potter"
	 print(mensagem)
else:
	 mensagem= "nao eh patrono do Harry Potter"
	 print(mensagem)

-- OUTPUT:
cervo eh patrono do Harry Potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 18:51:40) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
patrono= input("Digite seu cervo:")
if(patrono=="cervo"):
	 mensagem="cervo eh patrono do Harry Potter"
	 print(mensagem)
else:
	 mensagem= "nao eh patrono do Harry Potter"
	 print(mensagem)

-- OUTPUT:
cervo eh patrono do Harry Potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 18:51:48) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
patrono= input("Digite seu cervo:")
if(patrono=="cervo"):
	 mensagem="cervo eh patrono do Harry Potter"
	 print(mensagem)
else:
	 mensagem= "nao eh patrono do Harry Potter"
	 print(mensagem)

-- EXECUTION TIME:
0.185779
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
cervo eh patrono do Harry Potter
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
nao eh patrono do Harry Potter
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 18:52:01) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
patrono= input("Digite seu cervo:")
if(patrono=="cervo"):
	 mensagem="cervo eh patrono do Harry Potter"
	 print(mensagem)
else:
	 mensagem= "nao eh patrono do Harry Potter"
	 print(mensagem)

-- OUTPUT:
cervo eh patrono do Harry Potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 18:52:38) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
patrono= input("Digite seu cervo:")
if(patrono=="cervo"):
	 mensagem="cervo eh patrono do Harry Potter"
	 print(mensagem)
else:
	 mensagem= patrono+""+"nao eh patrono do Harry Potter"
	 print(mensagem)

-- OUTPUT:
cervo eh patrono do Harry Potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 18:52:43) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
patrono= input("Digite seu cervo:")
if(patrono=="cervo"):
	 mensagem="cervo eh patrono do Harry Potter"
	 print(mensagem)
else:
	 mensagem= patrono+""+"nao eh patrono do Harry Potter"
	 print(mensagem)

-- EXECUTION TIME:
0.123817
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
cervo eh patrono do Harry Potter
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
bodenao eh patrono do Harry Potter
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 18:52:54) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
patrono= input("Digite seu cervo:")
if(patrono=="cervo"):
	 mensagem="cervo eh patrono do Harry Potter"
	 print(mensagem)
else:
	 mensagem= patrono+ "" + "nao eh patrono do Harry Potter"
	 print(mensagem)

-- OUTPUT:
cervo eh patrono do Harry Potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 18:53:04) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
patrono= input("Digite seu cervo:")
if(patrono=="cervo"):
	 mensagem="cervo eh patrono do Harry Potter"
	 print(mensagem)
else:
	 mensagem= patrono+ "" + "nao eh patrono do Harry Potter"
	 print(mensagem)

-- EXECUTION TIME:
0.15532
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
cervo eh patrono do Harry Potter
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
bodenao eh patrono do Harry Potter
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 18:53:04) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
patrono= input("Digite seu cervo:")
if(patrono=="cervo"):
	 mensagem="cervo eh patrono do Harry Potter"
	 print(mensagem)
else:
	 mensagem= patrono+ "" + "nao eh patrono do Harry Potter"
	 print(mensagem)

-- OUTPUT:
cervo eh patrono do Harry Potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 18:53:22) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
patrono= input("Digite seu patrono:")
if(patrono=="cervo"):
	 mensagem="cervo eh patrono do Harry Potter"
	 print(mensagem)
else:
	 mensagem= patrono+ "" + "nao eh patrono do Harry Potter"
	 print(mensagem)

-- OUTPUT:
cervo eh patrono do Harry Potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 18:53:28) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
patrono= input("Digite seu patrono:")
if(patrono=="cervo"):
	 mensagem="cervo eh patrono do Harry Potter"
	 print(mensagem)
else:
	 mensagem= patrono+ "" + "nao eh patrono do Harry Potter"
	 print(mensagem)

-- EXECUTION TIME:
0.215431
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
cervo eh patrono do Harry Potter
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
bodenao eh patrono do Harry Potter
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 18:54:12) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
patrono= input("Digite seu patrono:")
if(patrono=="cervo"):
	 mensagem="cervo eh patrono do Harry Potter"
	print(mensagem)
else:
	 mensagem= patrono+ "" + "nao eh patrono do Harry Potter"
	print(mensagem)

-- ERROR:
File "XXXX", line 7
    print(mensagem)
                  ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 18:54:21) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
patrono= input("Digite seu patrono:")
if(patrono=="cervo"):
	 mensagem="cervo eh patrono do Harry Potter"
	 print(mensagem)
else:
	 mensagem= patrono+ "" + "nao eh patrono do Harry Potter"
	 print(mensagem)

-- OUTPUT:
cervo eh patrono do Harry Potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 18:54:24) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
patrono= input("Digite seu patrono:")
if(patrono=="cervo"):
	 mensagem="cervo eh patrono do Harry Potter"
	 print(mensagem)
else:
	 mensagem= patrono+ "" + "nao eh patrono do Harry Potter"
	 print(mensagem)

-- EXECUTION TIME:
0.205393
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
cervo eh patrono do Harry Potter
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
bodenao eh patrono do Harry Potter
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 18:54:26) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
patrono= input("Digite seu patrono:")
if(patrono=="cervo"):
	 mensagem="cervo eh patrono do Harry Potter"
	 print(mensagem)
else:
	 mensagem= patrono+ "" + "nao eh patrono do Harry Potter"
	 print(mensagem)

-- EXECUTION TIME:
0.1622
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
cervo eh patrono do Harry Potter
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
cervo eh patrono do Harry Potter
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 18:54:26) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
patrono= input("Digite seu patrono:")
if(patrono=="cervo"):
	 mensagem="cervo eh patrono do Harry Potter"
	 print(mensagem)
else:
	 mensagem= patrono+ "" + "nao eh patrono do Harry Potter"
	 print(mensagem)

-- EXECUTION TIME:
0.194178
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
cervo eh patrono do Harry Potter
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
cervo eh patrono do Harry Potter
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 18:54:26) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
patrono= input("Digite seu patrono:")
if(patrono=="cervo"):
	 mensagem="cervo eh patrono do Harry Potter"
	 print(mensagem)
else:
	 mensagem= patrono+ "" + "nao eh patrono do Harry Potter"
	 print(mensagem)

-- EXECUTION TIME:
0.15807
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
cervo eh patrono do Harry Potter
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
cervo eh patrono do Harry Potter
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 18:54:27) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
patrono= input("Digite seu patrono:")
if(patrono=="cervo"):
	 mensagem="cervo eh patrono do Harry Potter"
	 print(mensagem)
else:
	 mensagem= patrono+ "" + "nao eh patrono do Harry Potter"
	 print(mensagem)

-- EXECUTION TIME:
0.173625
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
cervo eh patrono do Harry Potter
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
cervo eh patrono do Harry Potter
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 18:54:27) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
patrono= input("Digite seu patrono:")
if(patrono=="cervo"):
	 mensagem="cervo eh patrono do Harry Potter"
	 print(mensagem)
else:
	 mensagem= patrono+ "" + "nao eh patrono do Harry Potter"
	 print(mensagem)

-- EXECUTION TIME:
0.165302
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
cervo eh patrono do Harry Potter
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
bodenao eh patrono do Harry Potter
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 18:54:28) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
patrono= input("Digite seu patrono:")
if(patrono=="cervo"):
	 mensagem="cervo eh patrono do Harry Potter"
	 print(mensagem)
else:
	 mensagem= patrono+ "" + "nao eh patrono do Harry Potter"
	 print(mensagem)

-- EXECUTION TIME:
0.211964
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
cervo eh patrono do Harry Potter
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
bodenao eh patrono do Harry Potter
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 18:54:28) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
patrono= input("Digite seu patrono:")
if(patrono=="cervo"):
	 mensagem="cervo eh patrono do Harry Potter"
	 print(mensagem)
else:
	 mensagem= patrono+ "" + "nao eh patrono do Harry Potter"
	 print(mensagem)

-- EXECUTION TIME:
0.105392
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
cervo eh patrono do Harry Potter
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
bodenao eh patrono do Harry Potter
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 18:54:29) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
patrono= input("Digite seu patrono:")
if(patrono=="cervo"):
	 mensagem="cervo eh patrono do Harry Potter"
	 print(mensagem)
else:
	 mensagem= patrono+ "" + "nao eh patrono do Harry Potter"
	 print(mensagem)

-- EXECUTION TIME:
0.106968
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
cervo eh patrono do Harry Potter
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
bodenao eh patrono do Harry Potter
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 18:54:29) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
patrono= input("Digite seu patrono:")
if(patrono=="cervo"):
	 mensagem="cervo eh patrono do Harry Potter"
	 print(mensagem)
else:
	 mensagem= patrono+ "" + "nao eh patrono do Harry Potter"
	 print(mensagem)

-- EXECUTION TIME:
0.08356
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1649/1053/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 18:54:29) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
patrono= input("Digite seu patrono:")
if(patrono=="cervo"):
	 mensagem="cervo eh patrono do Harry Potter"
	 print(mensagem)
else:
	 mensagem= patrono+ "" + "nao eh patrono do Harry Potter"
	 print(mensagem)

-- EXECUTION TIME:
0.114196
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
cervo eh patrono do Harry Potter
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
bodenao eh patrono do Harry Potter
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 18:54:29) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
patrono= input("Digite seu patrono:")
if(patrono=="cervo"):
	 mensagem="cervo eh patrono do Harry Potter"
	 print(mensagem)
else:
	 mensagem= patrono+ "" + "nao eh patrono do Harry Potter"
	 print(mensagem)

-- EXECUTION TIME:
0.090333
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1649/1053/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 18:54:30) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
patrono= input("Digite seu patrono:")
if(patrono=="cervo"):
	 mensagem="cervo eh patrono do Harry Potter"
	 print(mensagem)
else:
	 mensagem= patrono+ "" + "nao eh patrono do Harry Potter"
	 print(mensagem)

-- EXECUTION TIME:
0.0921261
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1649/1053/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 18:54:53) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
patrono= input("Digite seu patrono:")
if(patrono == "cervo"):
	 mensagem="cervo eh patrono do Harry Potter"
	 print(mensagem)
else:
	 mensagem= patrono+ "" + "nao eh patrono do Harry Potter"
	 print(mensagem)

-- OUTPUT:
cervo eh patrono do Harry Potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 18:54:59) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
patrono= input("Digite seu patrono:")
if(patrono == "cervo"):
	 mensagem="cervo eh patrono do Harry Potter"
	 print(mensagem)
else:
	 mensagem= patrono+ "" + "nao eh patrono do Harry Potter"
	 print(mensagem)

-- EXECUTION TIME:
0.149445
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
cervo eh patrono do Harry Potter
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
bodenao eh patrono do Harry Potter
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 18:55:14) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
patrono= input("Digite seu patrono:")
if(patrono == "cervo"):
	 mensagem="cervo eh patrono do Harry Potter"
	 print(mensagem)
else:
	 mensagem= patrono + "" + "nao eh patrono do Harry Potter"
	 print(mensagem)

-- OUTPUT:
cervo eh patrono do Harry Potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 18:55:24) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
patrono= input("Digite seu patrono:")
if(patrono == "cervo"):
	 mensagem="cervo eh patrono do Harry Potter"
	 print(mensagem)
else:
	 mensagem="nao eh patrono do Harry Potter"
	 print(mensagem)

-- OUTPUT:
cervo eh patrono do Harry Potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 18:55:36) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
patrono= input("Digite seu patrono:")
if(patrono == "cervo"):
	 mensagem="cervo eh patrono do Harry Potter"
	 print(mensagem)
else:
	 mensagem="nao eh patrono do Harry Potter"
	 print(mensagem)

-- EXECUTION TIME:
0.13124
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
cervo eh patrono do Harry Potter
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
nao eh patrono do Harry Potter
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 18:55:37) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
patrono= input("Digite seu patrono:")
if(patrono == "cervo"):
	 mensagem="cervo eh patrono do Harry Potter"
	 print(mensagem)
else:
	 mensagem="nao eh patrono do Harry Potter"
	 print(mensagem)

-- OUTPUT:
cervo eh patrono do Harry Potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 18:56:01) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
patrono= input("Digite seu patrono:")
if(patrono == "cervo"):
	 mensagem="cervo eh patrono do Harry Potter"
	 print(mensagem)
else:
	 mensagem= "<entrada> nao eh patrono do Harry Potter"
	 print(mensagem)

-- OUTPUT:
cervo eh patrono do Harry Potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 18:56:08) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
patrono= input("Digite seu patrono:")
if(patrono == "cervo"):
	 mensagem="cervo eh patrono do Harry Potter"
	 print(mensagem)
else:
	 mensagem= "<entrada> nao eh patrono do Harry Potter"
	 print(mensagem)

-- EXECUTION TIME:
0.220909
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
cervo eh patrono do Harry Potter
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
<entrada> nao eh patrono do Harry Potter
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 18:56:09) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
patrono= input("Digite seu patrono:")
if(patrono == "cervo"):
	 mensagem="cervo eh patrono do Harry Potter"
	 print(mensagem)
else:
	 mensagem= "<entrada> nao eh patrono do Harry Potter"
	 print(mensagem)

-- OUTPUT:
cervo eh patrono do Harry Potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 18:59:40) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
patrono= input("Digite seu patrono:")
if(patrono == "cervo"):
	 mensagem="cervo eh patrono do Harry Potter"
	 print(mensagem)
else:
	 mensagem= "nao eh patrono do Harry Potter"
	 print(mensagem)

-- OUTPUT:
cervo eh patrono do Harry Potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 19:00:41) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
patrono= input("Digite seu patrono:")
if(patrono == "cervo"):
	 mensagem="cervo eh patrono do Harry Potter"
	 print(mensagem)
else:
	 mensagem= "nao eh patrono do Harry Potter"
	 print(patrono+mensagem)

-- OUTPUT:
cervo eh patrono do Harry Potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 19:00:47) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
patrono= input("Digite seu patrono:")
if(patrono == "cervo"):
	 mensagem="cervo eh patrono do Harry Potter"
	 print(mensagem)
else:
	 mensagem= "nao eh patrono do Harry Potter"
	 print(patrono+mensagem)

-- EXECUTION TIME:
0.212428
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
cervo eh patrono do Harry Potter
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
bodenao eh patrono do Harry Potter
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 19:01:33) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
patrono= input("Digite seu patrono:")
if(patrono == "cervo"):
	 mensagem="cervo eh patrono do Harry Potter"
	 print(mensagem)
else:
	 mensagem= "nao eh patrono do Harry Potter"
	 print(patrono+" "+mensagem)

-- OUTPUT:
cervo eh patrono do Harry Potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 19:01:57) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
patrono= input("Digite seu patrono:")
if(patrono == "cervo"):
	 mensagem="cervo eh patrono do Harry Potter"
	 print(mensagem)
else:
	 mensagem= "nao eh patrono do Harry Potter"
	 print(patrono+""+mensagem)

-- OUTPUT:
cervo eh patrono do Harry Potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 19:02:25) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
patrono= input("Digite seu patrono:")
if(patrono == "cervo"):
	 mensagem="cervo eh patrono do Harry Potter"
	 print(mensagem)
else:
	 mensagem= "nao eh patrono do Harry Potter"
	 print(patrono+" "+mensagem+"jjjj")

-- OUTPUT:
cervo eh patrono do Harry Potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 19:03:07) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
patrono= input("Digite seu patrono:")
if(patrono == "cervo"):
	 mensagem="cervo eh patrono do Harry Potter"
	 print(mensagem)
else:
	 mensagem= "nao eh patrono do Harry Potter"
	 print(patrono+" "+mensagem)

-- OUTPUT:
cervo eh patrono do Harry Potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 19:03:23) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
patrono= input("Digite seu patrono:")
if(patrono == "cervo"):
	 mensagem="cervo eh patrono do Harry Potter"
	 print(mensagem)
else:
	 mensagem= "nao eh patrono do Harry Potter"
	 print(patrono+" "+mensagem)

-- EXECUTION TIME:
0.246258
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
cervo eh patrono do Harry Potter
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
bode nao eh patrono do Harry Potter
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
